Add Sorting By Creation Time

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <p>
                         Sort by:
                         <select class="sort-by" onchange="app.onSetSortBy()">
+                            <option value="createdAt">Date</option>
                             <option value="name">Name</option>
                             <option value="rate" selected>Rate</option>
                         </select>
