--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <div class="map"></div>
-        <div>
+        <div class="side-bar">
             <section class="locs-container">
                 <section class="loc-filter">
                     <div>
@@ -56,15 +56,15 @@
                 </section>
                 <h3>Locations</h3>
                 <ul class="loc-list"></ul>
+                <h3>Statistics</h3>
                 <section class="loc-stats">
-                    <h3>Statistics</h3>
                     <div class="loc-stats-rate">
                         <h4>By rate:</h4>
                         <div class="pie"></div>
                         <ul class="legend"></ul>
                     </div>
                     <div class="loc-stats-updated">
-                        <h4>By rate:</h4>
+                        <h4>By location:</h4>
                         <div class="pie"></div>
                         <ul class="legend"></ul>
                     </div>
