--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <section class="selected-loc">
             <h2>Location: <span class="loc-name"></span> <span class="loc-rate"></span></h2>
             <h4 class="loc-address"></h4>
-            <button onclick="app.onCopyLoc()">Copy location</button>
-            <button onclick="app.onShareLoc()">Share location</button>
+            <button onclick="app.onCopyLoc()">Copy</button>
+            <button onclick="app.onShareLoc()">Share</button>
             <input name="loc-copier" />
         </section>
         <form class="form-search" onsubmit="app.onSearchAddress(event)">
