--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>TravelTip</h1>
         <section class="selected-loc">
-            <h2>Location: <span class="loc-name"></span> <span class="loc-rate"></span></h2>
+            <h2>Location: <span class="loc-name"></span> <span class="loc-distance"></span> <span class="loc-rate"></span></h2>
             <h4 class="loc-address"></h4>
             <button onclick="app.onCopyLoc()">Copy location</button>
             <button onclick="app.onShareLoc()">Share location</button>
@@ -74,6 +74,13 @@
     </main>
     <pre class="debug" hidden></pre>
     <div class="user-msg"></div>
+    <div class="modal hide">
+        <label for=""> Name</label>
+        <input class="form-place" type="text" placeholder="Place name">
+        <label for=""> Rate</label>
+        <input class="form-rate" type="text" placeholder="1-5">
+        <button>Confirm</button>
+    </div>
     <script type="module" src="js/app.controller.js"></script>
 </body>
 
